# configurator

./: AUTHORS  CMakeLists.txt  README.md  com.github.cassidyjames.configurator.gschema.xml  org.pantheon.configurator.gschema.xml
data/: com.github.cassidyjames.configurator.appdata.xml  configurator.desktop
debian/: changelog  control  copyright
po/: CMakeLists.txt  bs.po  configurator.pot  de.po  fr.po  it.po  lt.po  nl.po  pt_BR.po  ru.po  sr.po  tr.po
src/: MainWindow.vala  Utils.vala  config.vala  config.vala.cmake  configurator.vala
src/Services/: EventManager.vala  Settings.vala
src/Widgets/: BrowserView.vala  EventsView.vala  InfoScreen.vala  Key.vala  KeyInfo.vala  KeyList.vala  Schema.vala  SchemaFolder.vala  SchemaList.vala  TitleBar.vala
src/Widgets/Fields/: ArrayInput.vala  BoolInput.vala  DoubleInput.vala  Int64Input.vala  IntegerInput.vala  SelectInput.vala  StringInput.vala  UInt64Input.vala  UIntegerInput.vala
